Improve test classes